Mon Mar 23 14:32:23 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_spawn): use original command if not found.

Mon Mar 23 06:51:16 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enc/depend (link_so): replaces $(TARGET) with basename of the
	  target.  [ruby-talk:330286]

Sun Mar 22 14:51:55 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_spawn, rb_w32_aspawn): use NULL as
	  application name for batch files.

Sat Mar 21 15:54:41 2009  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/ossl_ssl.c (write_would_block): defined.
	  (read_would_block): defined.
	  (ossl_start_ssl): add nonblock argument.
	  (ossl_ssl_connect): follow ossl_start_ssl change.
	  (ossl_ssl_connect_nonblock): new method.
	  (ossl_ssl_accept): follow ossl_start_ssl change.
	  (ossl_ssl_accept_nonblock): new method.
	  (ossl_ssl_read_internal): use write_would_block and
	  read_would_block.
	  (ossl_ssl_write_internal): ditto.

Sat Mar 21 08:19:52 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (rb_exec): prints error message only on platforms
	  neither close-on-exec nor spawnv is supported.

Sat Mar 21 08:17:41 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_spawn, rb_w32_aspawn): omit program name
	  if actual program path is found.  [ruby-core:22960]

Sat Mar 21 07:25:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (pipe_open): should pass program name even if multiple
	  arguments are given.  fix for TestProcess::test_argv0.

Sat Mar 21 02:37:07 2009  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/lib/openssl/buffering.rb
	  (OpenSSL::Buffering#write_nonblock): new method.

	* ext/openssl/ossl_ssl.c (ossl_ssl_write_nonblock): new method.
	  (ossl_ssl_write_internal): defined.
	  (ossl_ssl_write): use ossl_ssl_write_internal.

Fri Mar 20 18:25:25 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (errmap): added ERROR_MOD_NOT_FOUND.
